--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.3.3",
+    "i18next": "^21.8.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dark-mode-toggle-2": "^2.0.2",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.9",
     "react-intersection-observer": "^9.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
