--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-intersection-observer": "^9.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-parallax": "^3.2.0",
     "sass": "^1.50.1",
     "vivus": "^0.4.6",
     "web-vitals": "^2.1.4"
